--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.3.0",
     "@mui/material": "^6.2.1",
+    "@react-google-maps/api": "^2.20.5",
     "axios": "^1.7.9",
     "framer-motion": "^11.15.0",
     "prop-types": "^15.8.1",
