--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-google-maps/api": "^2.20.5",
     "axios": "^1.7.9",
     "framer-motion": "^11.15.0",
+    "hamzahaseeb-pkg": "^1.8.0",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
